Arreglas los headers y hacer cambios en las listas de los vehiculos usando DTOs